# pyaugmecon

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_client.py  client.py  client_uc.py  prek.toml  pyaugmecon.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pipeline.yml
benchmarks/: README.md  __init__.py  __main__.py  augmecon.py  augmecon_2.py  augmecon_r.py  cases.py  cli.py  client.py  default_parallelization.py  engines.py  model_data.py  parallelization_cores.py  parallelization_default.py  parallelization_no_redivide.py  parallelization_no_shared_flag.py  parallelization_simple.py
benchmarks/plans/: _cases.yaml  _scenarios.yaml  default.yaml  density_sweep.yaml  engine_comparison.yaml  method_comparison.yaml  parallel_scaling.yaml  solver_comparison.yaml
dev/: make_distribution.sh
pyaugmecon/: __init__.py  flag.py  helper.py  logs.py  model.py  options.py  process_handler.py  pyaugmecon.py  queue_handler.py  solver_process.py
src/pyaugmecon/: __init__.py  config.py  example_models.py  helper.py  logs.py  model.py  process_handler.py  pyaugmecon.py  results.py  solver_adapter.py  solver_process.py
src/pyaugmecon/data/2kp100/: a.csv  b.csv  c.csv  e_points.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/2kp250/: a.csv  b.csv  c.csv  e_points.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/2kp50/: a.csv  b.csv  c.csv  epsilon_grid.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/3kp40/: a.csv  b.csv  c.csv  epsilon_grid.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/3kp50/: a.csv  b.csv  c.csv  epsilon_grid.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/4kp40/: a.csv  b.csv  c.csv  e_points.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/data/4kp50/: a.csv  b.csv  c.csv  pareto_sols.csv  payoff_table.csv
src/pyaugmecon/solver/: __init__.py  adapter.py  core.py  model.py  process.py  queue.py  worker.py
tests/: helper.py  optimizationModels.py  optimization_models.py  test_2kp100.py  test_2kp250.py  test_2kp50.py  test_3kp40.py  test_3kp50.py  test_4kp40.py  test_4kp50.py  test_three_objectives.py  test_three_objectives_mixed.py  test_two_objectives.py
tests/ga/: test_three_objectives.py  test_three_objectives_mixed.py  test_two_objectives.py
tests/input/: 2kp100.xlsx  2kp250.xlsx  2kp50.xlsx  2kp500.xlsx  2kp750.xlsx  3kp40.xlsx  3kp50.xlsx  4kp40.xlsx  4kp50.xlsx  dispatch.xlsx  unit_commitment.xlsx
tests/integration/: __init__.py  test_knapsack_models.py  test_small_models.py
tests/support/: __init__.py  assertions.py  factories.py  models.py
tests/unit/: __init__.py  test_config.py  test_core.py  test_results.py
tests/unit/solver/: __init__.py  conftest.py  test_adapter.py  test_core.py  test_model.py  test_model_lifecycle.py  test_model_status.py  test_process.py  test_queue.py
