[metadata]
name = pyaugmecon
version = 0.1
description = An AUGMECON based multi-objective optimization solver for Pyomo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wouterbles/pyaugmecon
author = Wouter Bles
author_email = whbles@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
keywords = python, pyomo, optimization, multi-objective-optimization, augmecon
project_urls =
    Source = https://github.com/wouterbles/pyaugmecon
    Tracker = https://github.com/wouterbles/pyaugmecon/issues

[options]
packages = pyaugmecon
install_requires = pyomo, gurobi, cloudpickle, numpy
python_requires = >=3.6
